crates/toml_edit/tests/snapshots/invalid/table/no-close-6.stderr
TOML parse error at line 1, column 3
  |
1 | [a
  |   ^
invalid table header
expected `.`, `]`
